--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "react-redux": "^6.0.0",
     "react-scripts": "2.1.2",
     "redux": "^4.0.1",
-    "styled-components": "^4.1.3"
+    "styled-components": "^4.1.3",
+    "uniqid": "^5.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
